objects/ID_Card__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name1__c</fullName>
        <formula>Implementation__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Status Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved_by_Legal__c</fullName>
        <label>Approved by Legal?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will indicate whether email has been sent to Mast when ID card has been submitted for approval</description>
        <label>Approver Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_there_any_special_requests__c</fullName>
        <label>Are there any special requests?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRF_Id__c</fullName>
        <formula>Implementation__r.Benefit_Request_Form__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_vendors__c</fullName>
        <label>Count of vendors</label>
        <summaryForeignKey>AIA_Vendor__c.ID_Card__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_of_submission_form__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of submission form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date1__c</fullName>
        <formula>Implementation__r.Benefit_Request_Form__r.Benefit_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FlexLink__c</fullName>
        <formula>if(text(Implementation__r.Benefit_Request_Form__r.FlexLink_Picklist__c) == 'Yes', True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FlexLink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Card_Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Card Vendor</label>
        <length>230</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipLabel>ID Cards</relationshipLabel>
        <relationshipName>ID_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_CareFirst_Producing_ID_Card__c</fullName>
        <label>Is CareFirst Producing ID Card</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_a_performance_Agreement__c</fullName>
        <label>Is there a performance Agreement?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_an_unique_number__c</fullName>
        <label>Is there an unique number?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MAST_Tech_Approver_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To hold Approver User Id</description>
        <label>MAST Tech Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ID_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mast_Tech_Approver__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mast Tech - Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mast_Tech_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mast Tech User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ID_Cards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Level_Products_Comments1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Level Products Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Member_Level__c</fullName>
        <inlineHelpText>All ID Cards with PCP's are Member Level.  If Non-Parallel with non-PCP benefits, ID Cards cannot be done at Member Level.  If Non-Parallel with PCP benefits, the non-PCP products will be at Contract level.</inlineHelpText>
        <label>Member Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_level_Products__c</fullName>
        <label>Member level Products</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_level_products_comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member level products comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_ID_Card_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Miscellaneous / ID Card Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Special_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Request_to_show_PCP_as_Not_Req__c</fullName>
        <inlineHelpText>Special Request to show PCP as Not Required?</inlineHelpText>
        <label>Special Request to show PCP as Not Req</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Request_to_show_PCP_as_Not_Requi__c</fullName>
        <inlineHelpText>Special Request to show PCP as Not Required?</inlineHelpText>
        <label>Special Request to show PCP as Not Req</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Requests__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Requests?</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Stuffer_Request__c</fullName>
        <label>Special Stuffer Request?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_ID_Card_Require_a_Logo__c</fullName>
        <label>Will ID Card Require a Logo?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_a_Non_CareFirst_Vendor_Logo_be_Need__c</fullName>
        <label>Will a Non-CareFirst Vendor Logo be Need</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>products_selected_count__c</fullName>
        <label>products selected count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sent_to_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>sent to approval?</label>
        <type>Checkbox</type>
    </fields>
    <label>ID Card</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>ID Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ID Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>ID_Card</fullName>
        <active>true</active>
        <label>ID Card</label>
    </recordTypes>
    <validationRules>
        <fullName>EID01</fullName>
        <active>true</active>
        <description>Approved by Legal to be filled out only when "Will a Non-CareFirst Vendor Logo be Needed?" is Yes</description>
        <errorConditionFormula>AND((ISPICKVAL(Will_a_Non_CareFirst_Vendor_Logo_be_Need__c, "Yes")),ISBLANK(Text( Approved_by_Legal__c)))</errorConditionFormula>
        <errorDisplayField>Approved_by_Legal__c</errorDisplayField>
        <errorMessage>EID01: Please provide a value since this ID Card requires a Non-CareFirst vendor logo</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EID02</fullName>
        <active>false</active>
        <description>At least one record needs to be added to Vendor related list before it can be sent for Approval</description>
        <errorConditionFormula>AND(ISPICKVAL(Will_a_Non_CareFirst_Vendor_Logo_be_Need__c, "Yes"), ISCHANGED(Status__c), Count_of_vendors__c &lt;1)</errorConditionFormula>
        <errorMessage>At least one record needs to be added to Vendor related list before it can be sent for Approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EID03</fullName>
        <active>true</active>
        <description>Phone Number field to be populated when "Is there an unique number ?" is Yes</description>
        <errorConditionFormula>AND(ISPICKVAL( Is_there_an_unique_number__c , "Yes"),ISBLANK(Phone_Number__c))</errorConditionFormula>
        <errorDisplayField>Phone_Number__c</errorDisplayField>
        <errorMessage>EID03: Please provide a value since this there is a unique number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EID04</fullName>
        <active>true</active>
        <description>Fill out only when "Are there any special requests ?" is Yes</description>
        <errorConditionFormula>AND( ISPICKVAL( Are_there_any_special_requests__c ,"Yes"), ISBLANK( Special_Requests__c ) )</errorConditionFormula>
        <errorDisplayField>Special_Requests__c</errorDisplayField>
        <errorMessage>EID04: Please provide a value since there are special requests for this ID Card</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EID05</fullName>
        <active>false</active>
        <description>Fill out only when "Is CareFirst Producing ID Card" field is selected as No</description>
        <errorConditionFormula>OR(AND(ISPICKVAL(Is_CareFirst_Producing_ID_Card__c , "Yes"), NOT(ISBLANK( ID_Card_Vendor__c ))),AND(ISPICKVAL(Is_CareFirst_Producing_ID_Card__c , "No"), (ISBLANK( ID_Card_Vendor__c ))))</errorConditionFormula>
        <errorDisplayField>ID_Card_Vendor__c</errorDisplayField>
        <errorMessage>Fill out when "Is CareFirst Producing ID Card" field is selected as No</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EID06</fullName>
        <active>true</active>
        <errorConditionFormula>AND(sent_to_approval__c = TRUE, OR(Count_of_vendors__c = 0, ISBLANK(Count_of_vendors__c ) ), ISPICKVAL( Is_CareFirst_Producing_ID_Card__c ,"No"))</errorConditionFormula>
        <errorMessage>Please add vendors in the related list</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EID07</fullName>
        <active>true</active>
        <errorConditionFormula>AND(sent_to_approval__c = TRUE,OR( ISBLANK(products_selected_count__c),products_selected_count__c=0 ))</errorConditionFormula>
        <errorDisplayField>Member_level_Products__c</errorDisplayField>
        <errorMessage>Please select atleast one product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EID08</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( PRIORVALUE( Status__c ) , "In Review") , ( ISPICKVAL( Status__c , "In Progress") ) )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>In Progress is not allowed when status is in Review</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EID09</fullName>
        <active>false</active>
        <description>Fill out only when "Are there any special requests ?" is Yes</description>
        <errorConditionFormula>AND( ISPICKVAL( Are_there_any_special_requests__c ,"Yes"),( ISBLANK( Special_Requests__c ) ) )</errorConditionFormula>
        <errorDisplayField>Special_Requests__c</errorDisplayField>
        <errorMessage>EID09: Special Requests should be filled when "Are there any special requests ?" is Yes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EID10</fullName>
        <active>true</active>
        <description>Approved by Legal to be filled out only when "Will a Non-CareFirst Vendor Logo be Needed?" is Yes</description>
        <errorConditionFormula>AND( ISPICKVAL(Will_a_Non_CareFirst_Vendor_Logo_be_Need__c, "No"),!ISBLANK(Text( Approved_by_Legal__c)))</errorConditionFormula>
        <errorDisplayField>Approved_by_Legal__c</errorDisplayField>
        <errorMessage>EID10: To be filled out  when "Will a Non-CareFirst Vendor Logo be Needed?" is Yes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EID11</fullName>
        <active>true</active>
        <description>approver cannot select other than approved or rejected in status field</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; NOT((ISPICKVAL( Status__c  , 'Approved') || ISPICKVAL( Status__c , 'Rejected'))) &amp;&amp; OwnerId  != $User.Id</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>EID11: Approver cannot select other than approved or rejected in status field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EID12</fullName>
        <active>true</active>
        <description>User cannot set status to Approved/Rejected</description>
        <errorConditionFormula>/*AND(OwnerId = $User.Id,  (ISPICKVAL( Status__c , "Approved")|| ISPICKVAL( Status__c , "Rejected")|| ISPICKVAL( Status__c , "In Review")))*/

AND(OwnerId = $User.Id,  (ISPICKVAL( Status__c , "Approved")|| ISPICKVAL( Status__c , "Rejected")|| ISPICKVAL( Status__c , "In Review")), ISCHANGED(Status__c) )</errorConditionFormula>
        <errorMessage>EID: User can only set status to "In Progress"</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EID13</fullName>
        <active>true</active>
        <description>Approver cannot set the status to In Progress</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; AND(OwnerId != $User.Id, NOT(ISPICKVAL( Status__c , "Approved")||ISPICKVAL( Status__c , "Rejected") ))</errorConditionFormula>
        <errorMessage>EID13: Approver can set status only to either Approved or Rejected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EID14</fullName>
        <active>true</active>
        <description>When status is Approved or Rejected or In-Review, it cannot be submitted again</description>
        <errorConditionFormula>/*AND(OR(TEXT(Status__c)='In Review',TEXT(Status__c)='Approved',TEXT(Status__c)='Rejected'), sent_to_approval__c =true )*/
AND(OR(ISPICKVAL(PRIORVALUE(Status__c),'Approved'),ISPICKVAL(PRIORVALUE(Status__c),'Rejected')), sent_to_approval__c =true)</errorConditionFormula>
        <errorMessage>EID14: When status is Approved or Rejected or In-Review, it cannot be submitted again</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EID15</fullName>
        <active>true</active>
        <description>When Status is Rejected, Comments needs to be added</description>
        <errorConditionFormula>AND(Text(Status__c) ='Rejected', ISBLANK(Approval_Status_Comments__c))</errorConditionFormula>
        <errorDisplayField>Approval_Status_Comments__c</errorDisplayField>
        <errorMessage>EID15:When Status is Rejected, Comments needs to be added</errorMessage>
    </validationRules>
</CustomObject>